# Metadata about the Python package https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "django-graphene-filters"
version = "0.0.9"
description = "Advanced auto related filters for Graphene Django"
authors = ["Rio Weber <riodweber@gmail.com>"]
maintainers = ["Rio Weber <riodweber@gmail.com>"]
license = "LICENSE"
readme = "README.md"
homepage = "https://github.com/riodw/django-graphene-filters"
repository = "https://github.com/riodw/django-graphene-filters"
keywords = ["django", "graphene", "filters", "related"]
# Classifiers helps to find project by categorizing it
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Graphene",
]

[tool.poetry.urls]
Homepage = "https://pypi.org/project/django-graphene-filters"
repository = "https://pypi.org/project/django-graphene-filters"
issues = "https://github.com/riodw/django-graphene-filters/issues"
# DOWNLOAD = "https://github.com/riodw/django-graphene-filters"

# Dependencies needed to run the package
[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Django = "6.0.1"
graphene = ">=3,<4"
graphene-django = ">=3.0.0"
django-filter = "^25.2"
psycopg2-binary = "^2.9.3"
stringcase = "^1.2.0"
anytree = "^2.13.0"
wrapt = "^2.0.1"



# How the package will be built

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
coverage = "^7.13.2"
flake8-annotations = "^3.2.0"
flake8-builtins = "^3.1.0"
flake8-import-order = "^0.19.2"
flake8-simplify = "^0.30.0"
pep8-naming = "^0.15.1"
pre-commit = "^4.5.1"
pytest = "^9.0.2"
pytest-django = "^4.5.2"
django-seed = "^0.3.1"
flake8 = "^7.0.0"
flake8-comprehensions = "^3.8.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.5.0"
flake8-quotes = "^3.3.2"
flake8-use-fstring = "^1.3"
python-dotenv = "^1.0.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Semantic release settings
[tool.semantic_release]
version_variable = [
    "django_graphene_filters/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "master"
# Whether to upload to PyPI
upload_to_pypi = true
# Whether to upload to GitHub Releases
upload_to_release = true
# Build command before release
build_command = "pip install poetry && poetry build"
